<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginTop="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"

            >

            <TextView
                android:id="@+id/addTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="ADD"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/addIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/addWithExp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                />
            <TextView
                android:id="@+id/editTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="EDIT"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/editIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/editExplain"
                android:textAppearance="@style/TextAppearance.AppCompat"
                />
            <TextView
                android:id="@+id/deleteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="REMOVE"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/deleteIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/deleteExplain"
                android:textAppearance="@style/TextAppearance.AppCompat"
                />

            <TextView
                android:id="@+id/scanTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="CAPTURE IMAGE"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/tickIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="To take a picture press the capture image button and take a clear unobstructed picture of your items. This image will then be processed and if items are detected they will be automatically added."
                android:textAppearance="@style/TextAppearance.AppCompat"
                />

            <TextView
                android:id="@+id/addPantryExplain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="ADD TO PANTRY"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/addExplain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/addExplain2"
                android:textAppearance="@style/TextAppearance.AppCompat"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>